* Implemented ability to edit BuddyPress xprofile fields visibility settings
* Improved rendering gateway information at the members list table
* Improved ping argument processing
* Improved 100% coupon gateway setup
* Improved BuddyPress registration form compatibility
* Reworked purchase free subscription process
* Reworked default subscription setup for users without subscriptions

== 3.4.6 ==

* Fixed BuddyPress pages protection issue
* Fixed upgrade and initial installation issues
* Fixed communication emails sending issue
* Fixed communication message subscription plan selection
* Fixed unexpected URL exclusion which leads to unexpected issues
* Fixed issue with not loaded custom templates for membership pages
* Fixed bug with wrongly added memberhsip pages to a query
* Fixed ability to access account page by unlogged users
* Fixed issue with left user information in the membership relationships table after user has been deleted
* Fixed issue with popup registration form when email address was not determined
* Fixed issue with not required invite code at BuddyPress registration page
* Fixed issue with invite codes which appears after each BuddyPress fields
* Fixed issue with not redirected page after 100% discount coupon was applied
* Fixed issue with empty page appeared after redirection to protected page
* Fixed issue with coupon used count incrementation when 100% discount coupon is used
* Fixed issue with broken subscription URLs at registration form when ?id= permalink is used
* Implemented ability to test rules in an URL group
* Implemented ability to sort subscription plans at front end
* Implemented deletion of the "user registration" subscription after first regular subscription is selected
* Implemented ability to grant user capability to view all content pages
* Reworked protection rules
* Reworked BuddyPress protection rules

== 3.4.5 ==

* Fixed URL Groups match issues