@@ -1,8 +1,6 @@
 <?php
-/*
-*	Membership plugin configuration file v1.0 - now replaced by config.php
-*
-*/
+
+// Membership plugin configuration file v1.0 - now replaced by config.php
 
 // Determines the number of posts to show in the posts rule
 if(!defined('MEMBERSHIP_POST_COUNT')) define( 'MEMBERSHIP_POST_COUNT', 25);
@@ -37,6 +35,4 @@ if(!defined('MEMBERSHIP_FILE_NAME_INCREMENT')) define( 'MEMBERSHIP_FILE_NAME_INC
 if(!defined('MEMBERSHIP_REDIRECT_ON_EMPTY_CATEGORYPAGE')) define('MEMBERSHIP_REDIRECT_ON_EMPTY_CATEGORYPAGE', false);
 
 // Re-enable the deactivate user on registration and cancellation facility
-if(!defined('MEMBERSHIP_DEACTIVATE_USER_ON_REGISTRATION')) define('MEMBERSHIP_DEACTIVATE_USER_ON_REGISTRATION', false);
 if(!defined('MEMBERSHIP_DEACTIVATE_USER_ON_CANCELATION')) define('MEMBERSHIP_DEACTIVATE_USER_ON_CANCELATION', false);
-?>
